--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.29.3",
     "firebase": "^9.12.1",
+    "moment": "^2.29.4",
+    "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.9.1",
     "react-dom": "^18.2.0",
